fixing color contrasts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,29 +4,29 @@
  
 @layer base {
   :root {
-    --background: 210,40%,96.1%;  /* slate-100 */
-    --foreground: 215.3,25%,26.7%; /* slate-700 */
+    --background: 214.3,31.8%,91.4%;  /* slate-200 */
+    --foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
-    --muted: 214.3,31.8%,91.4%; /* slate-200 */
-    --muted-foreground: 215.3,19.3%,34.5%; /* slate-600 */
+    --muted: 210,40%,96.1%;  /* slate-100 */
+    --muted-foreground: 215.3,25%,26.7%; /* slate-700 */
 
-    --popover: 210,40%,98%; /* slate-50 */
-    --popover-foreground: 215.3,25%,26.7%; /* slate-700 */
+    --popover: 214.3,31.8%,91.4%;  /* slate-200 */
+    --popover-foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
     --border: 213.1,93.9%,67.8%; /* blue-400 */
     --input: 213.1,93.9%,67.8%; /* blue-400 */
 
     --card: 210,40%,98%; /* slate-50 */
-    --card-foreground: 215.3,25%,26.7%; /* slate-700 */
+    --card-foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
     --primary: 213.1,93.9%,67.8%; /* blue-400 */
     --primary-foreground: 210,40%,96.1%;  /* slate-100 */
 
-    --secondary: 214.3,31.8%,91.4%; /* slate-200 */
-    --secondary-foreground: 215.3,25%,26.7%; /* slate-700 */
+    --secondary: 210,40%,98%; /* slate-50 */
+    --secondary-foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
     --accent: 213.3,96.9%,87.3%; /* blue-200 */
-    --accent-foreground: 210,40%,96.1%;  /* slate-100 */
+    --accent-foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
     --destructive: 0,84.2%,60.2%;  /* red-500 */
     --destructive-foreground: 210,40%,96.1%;  /* slate-100 */
@@ -43,7 +43,7 @@
     --muted: 222.2,47.4%,11.2%; /* slate-900 */
     --muted-foreground: 215.4,16.3%,46.9%; /* slate-500 */
 
-    --popover: 215.3,25%,26.7%; /* slate-700 */
+    --popover: 217.2,32.6%,17.5%; /* slate-800 */
     --popover-foreground: 210,40%,96.1%;  /* slate-100 */
 
     --border: 217.2,91.2%,59.8%; /* blue-500 */
@@ -56,10 +56,10 @@
     --primary-foreground: 210,40%,96.1%;  /* slate-100 */
 
     --secondary: 215.3,25%,26.7%; /* slate-700 */
-    --secondary-foreground: 214.3,31.8%,91.4%; /* slate-200 */
+    --secondary-foreground: 210,40%,96.1%;  /* slate-100 */
 
     --accent: 211.7,96.4%,78.4%; /* blue-300 */
-    --accent-foreground: 210,40%,96.1%;  /* slate-100 */
+    --accent-foreground: 217.2,32.6%,17.5%; /* slate-800 */
 
     --destructive: 0,72.2%,50.6%; /* red-600 */
     --destructive-foreground: 210,40%,96.1%;  /* slate-100 */
